--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,30 @@
 ###################
 *.com
 *.class
-*.dll
-*.exe
 *.o
+
+# Executables #
+###############
+*.exe
+*.out
+
+# Compiled dynamic libraries #
+##############################
 *.so
+*.dylib
+*.dll
+
+# Compiled static libraries #
+#############################
+*.lai
+*.la
+*.a
+*.lib
+
+# Precompiled headers #
+#######################
+*.gch
+*.pch
 
 # Logs and databases #
 ######################
@@ -22,3 +42,11 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# IDE generated files #
+#######################
+.vscode/
+
+# Build files #
+###############
+build/
